# PP4mat

./: .gitignore  README.md  main.py  package-lock.json  package.json  paper4mat.py  pyproject.toml  requirements.txt  rules.yaml
app/: main.py
app/api/: endpoints.py
app/services/: paper_checker.py
config_converter/: __init__.py  align_converter.py  config_handle.py  converter.py  logger.py
configs/: rules.yaml
format_checker/: __init__.py  checker.py  logger.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: styles.css
frontend/src/: App.jsx
src/pp4mat/: logger.py  paper4mat.py  report.py
src/pp4mat/config_converter/: __init__.py  align_converter.py  config_handle.py  converter.py
src/pp4mat/format_checker/: __init__.py  checker.py  utils.py
